@@ -54,7 +54,7 @@ public class CompressedClassPointersEncodingScheme {
                 "-XX:" + (COH ? "+" : "-") + "UseObjectMonitorTable",
                 "-XX:CompressedClassSpaceBaseAddress=" + forceAddress,
                 "-XX:CompressedClassSpaceSize=" + classSpaceSize,
-                "-Xmx128m",
+                "-Xmx64m",
                 "-Xlog:metaspace*",
                 "-version");
         OutputAnalyzer output = new OutputAnalyzer(pb.start());
@@ -71,35 +71,6 @@ public class CompressedClassPointersEncodingScheme {
         output.shouldContain("Narrow klass base: " + expectedEncodingBaseString + ", Narrow klass shift: " + expectedEncodingShift);
     }
 
-    private static void testFailure(String forceAddressString) throws IOException {
-        ProcessBuilder pb = ProcessTools.createLimitedTestJavaProcessBuilder(
-                "-Xshare:off", // to make CompressedClassSpaceBaseAddress work
-                "-XX:+UnlockExperimentalVMOptions",
-                "-XX:+UnlockDiagnosticVMOptions",
-                "-XX:-UseCompactObjectHeaders",
-                "-XX:CompressedClassSpaceBaseAddress=" + forceAddressString,
-                "-Xmx128m",
-                "-Xlog:metaspace*",
-                "-version");
-        OutputAnalyzer output = new OutputAnalyzer(pb.start());
-
-        output.reportDiagnosticSummary();
-
-        // We ignore cases where we were not able to map at the force address
-        if (!output.contains("Successfully forced class space address to " + forceAddressString)) {
-            throw new SkippedException("Skipping because we cannot force ccs to " + forceAddressString);
-        }
-
-        if (Platform.isAArch64()) {
-            output.shouldHaveExitValue(1);
-            output.shouldContain("Error occurred during initialization of VM");
-            output.shouldContain("CompressedClassSpaceBaseAddress=" + forceAddressString +
-                                 " given with shift 0, cannot be used to encode class pointers");
-        } else {
-            output.shouldHaveExitValue(0);
-        }
-    }
-
     final static long K = 1024;
     final static long M = K * 1024;
     final static long G = M * 1024;
@@ -108,53 +79,47 @@ public class CompressedClassPointersEncodingScheme {
         // Expecting base=0, shift=0
         test(4 * G - 128 * M, false, 128 * M, 0, 0);
 
-        // Test ccs nestling right at the end of the 32G range
-        // Expecting:
-        // - non-aarch64: base=0, shift=3
-        // - aarch64: base to start of class range, shift 0
-        if (Platform.isAArch64()) {
-            // The best we can do on aarch64 is to be *near* the end of the 32g range, since a valid encoding base
-            // on aarch64 must be 4G aligned, and the max. class space size is 3G.
-            long forceAddress = 0x7_0000_0000L; // 28g, and also a valid EOR immediate
-            test(forceAddress, false, 3 * G, forceAddress, 0);
-        } else {
-            test(32 * G - 128 * M, false, 128 * M, 0, 3);
-        }
+        // aarch64 does not do extended zero based encoding (shift>0)
+        boolean expectExtendedZeroBasedEncoding = !Platform.isAArch64();
 
-        // Test ccs starting *below* 4G, but extending upwards beyond 4G. All platforms except aarch64 should pick
-        // zero based encoding. On aarch64, this test is excluded since the only valid mode would be XOR, but bit
-        // pattern for base and bit pattern would overlap.
-        if (!Platform.isAArch64()) {
-            test(4 * G - 128 * M, false, 2 * 128 * M, 0, 3);
-        }
-        // add more...
+        // Test ccs nestling right at the end of the 32G range.
+        // Expect all platforms but aarch64 to do shift-extended zero-based encoding;
+        long forceAddress = 32 * G - 128 * M;
+        test(forceAddress, false, 128 * M,
+                expectExtendedZeroBasedEncoding ? 0 : forceAddress, // expected base
+                expectExtendedZeroBasedEncoding ? 3 : 0             // expected shift
+                );
+
+        // Test ccs starting *below* 4G, but extending upwards beyond 4G.
+        // Expect all platforms but aarch64 to do shift-extended zero-based encoding; aarch64 does not do that but
+        // drops right to non-zero-based with shift = 0
+        forceAddress = 4 * G - 128 * M;
+        test(forceAddress, false, 2 * 128 * M,
+                expectExtendedZeroBasedEncoding ? 0 : forceAddress, // expected base
+                expectExtendedZeroBasedEncoding ? 3 : 0             // expected shift
+        );
 
         // Compact Object Header Mode:
-        // On aarch64 and x64 we expect the VM to chose the smallest possible shift value needed to cover
-        // the encoding range. We expect the encoding Base to start at the class space start - but to enforce that,
-        // we choose a high address.
-        if (Platform.isAArch64() || Platform.isX64() || Platform.isRISCV64()) {
-            long forceAddress = 32 * G;
+        // We expect the VM to chose the smallest possible shift value needed to cover the encoding range.
+        // We expect the encoding Base to start at the class space start - but to enforce that,
+        // we choose unsuited to even shift-extended zero-based mode.
+        forceAddress = 32 * G;
 
-            long ccsSize = 128 * M;
-            int expectedShift = 6;
-            test(forceAddress, true, ccsSize, forceAddress, expectedShift);
+        test(forceAddress, true, 128 * M, forceAddress, 6);
+        test(forceAddress, true, 256 * M, forceAddress, 7);
+        test(forceAddress, true, 512 * M, forceAddress, 8);
+        test(forceAddress, true, G, forceAddress, 9);
+        test(forceAddress, true, 3 * G, forceAddress, 10);
 
-            ccsSize = 512 * M;
-            expectedShift = 8;
-            test(forceAddress, true, ccsSize, forceAddress, expectedShift);
-
-            ccsSize = G;
-            expectedShift = 9;
-            test(forceAddress, true, ccsSize, forceAddress, expectedShift);
-
-            ccsSize = 3 * G;
-            expectedShift = 10;
-            test(forceAddress, true, ccsSize, forceAddress, expectedShift);
-        }
-
-        // Test failure for -XX:CompressedClassBaseAddress and -Xshare:off
-        testFailure("0x0000040001000000");
+        // Test a "crooked" base address:
+        // - just aligned enough to pass metaspace reserve alignment test of 16MB.
+        // - not encodable on aarch64 as logical immediate
+        // - sufficiently complex enough to need multiple moves on risc platforms to materialize as immediate
+        // - small enough to not cause test errors on small devices (e.g. arm64 39bit address space)
+        // - large enough to not end up with zero-based encoding
+        forceAddress = 0x0000000d55000000L;
+        test(forceAddress, true, 32 * M, forceAddress, 6);
+        test(forceAddress, false, 32 * M, forceAddress, 0);
 
     }
 }
